[package]
name = "massa_consensus_worker"
version = "0.1.0"
authors = ["Massa Labs <info@massa.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.2"
num = { version = "0.4", features = ["serde"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
#custom modules
massa_consensus_exports = { path = "../massa-consensus-exports" }
massa_models = { path = "../massa-models" }
massa_storage = { path = "../massa-storage" }
massa_signature = { path = "../massa-signature" }
massa_time = { path = "../massa-time" }
massa_hash = { path = "../massa-hash" }
massa_logging = { path = "../massa-logging" }
massa_execution_exports = { path = "../massa-execution-exports", optional = true}
massa_protocol_exports = { path = "../massa-protocol-exports", optional = true}
massa_pos_worker = { path = "../massa-pos-worker", optional = true}
massa_pos_exports = { path = "../massa-pos-exports", optional = true}
massa_pool_exports = { path = "../massa-pool-exports", optional = true}
tokio = { version = "1.0", optional = true }
crossbeam-channel = { version = "0.5.6", optional = true }


[features]
testing = ["tokio", "crossbeam-channel", "massa_execution_exports/testing", "massa_pos_worker/testing",  "massa_protocol_exports/testing", "massa_consensus_exports/testing", "massa_pos_exports/testing", "massa_pool_exports/testing"]
sandbox = []